# python-project-52

./: .gitignore  Makefile  README.md  build.sh  conftest.py  debug_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_pytest_wrapper.py  test_settings.py  tests.py
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  settings.py  urls.py
task_manager/task_manager_app/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/task_manager_app/fixtures/: tasks.json
task_manager/task_manager_app/migrations/: 0001_initial.py  0003_label_task_labels.py
task_manager/templates/labels/: create.html  index.html
task_manager/templates/statuses/: delete.html
task_manager/templates/tasks/: detail.html
task_manager/templates/users/: create.html  delete.html  index.html
task_manager_app/: filters.py  forms.py  models.py  test_filters.py  tests.py  urls.py  views.py
task_manager_app/fixtures/: statuses.json  users.json
task_manager_app/migrations/: 0002_task.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/users/: create.html  delete.html  index.html  login.html  update.html
